--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kablammo:ital,wght@0,400&display=swap');
+
 html, body {
     margin: 0;
     padding: 0;
